--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "react_starter",
+  "name": "guess_game_2",
   "version": "1.0.0",
-  "description": "Starting setup for react redux project",
+  "description": "Guessing game made in ReactJs",
   "main": "index.js",
   "scripts": {
     "start": "node dev_server.js",
     "bundle": "node_modules/.bin/webpack --config webpack.deploy.config.js --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Scott Bowler",
+  "author": "Taylor Davidson",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Learning-Fuze/react_starter.git"
+    "url": "https://github.com/tfdavid/guess_game_2.git"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
